2016-06-15  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Settings/q_std.m:
	* Settings/q_meso.m: Setting of Q.ARTS added.

	* Settings/q_fields.rst (Qsmr): Added description of flield ARTS.

	* Mscripts_precalc/q2_precalc_fgrid.m (f_opt):
	* Mscripts_precalc/q2_precalc_abslookup.m (do_1fmode):
	* Mscripts_arts/q2_oemiter.m:
	* Mscripts_arts/q2_arts_y.m:
	* Mscripts_arts/q2_arts_sensor_parts.m: Adopted call of q2_arts.

	* Mscripts_arts/q2_arts.m: Now takes Q as input and uses Q.ARTS.

2016-06-06  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Changes to have different folders for f_grids-a and abs_lookup-s
	for stnd and meso inversions.

2016-06-03  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Settings/q_std.m: Updated to hold recently added fields.

2016-06-02  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Mscripts_arts/q2_inv.m (subfun4retqs): CORRLEN values now
	checked to be > 0. Error message includes hint to obtain a
	diagonal SX.

2016-06-02  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Mscripts_precalc/q2_precalc_fgrid.m: C.REFRACTION_DO hard-coded
	to false.

	* Mscripts_arts/q2_arts_y.m:
	* Mscripts_arts/q2_inv.m (subfun4retqs):
	* Settings/q_fields.rst:
	* Mscripts_arts/q2_artscfile_full.m: Added REFRACTION_DO

	* Mscripts_precalc/q2_precalc_abslookup.m:
	* Mscripts_precalc/q2_precalc_fgrid.m:
	* Mscripts_arts/q2_artscfile_full.m: Removed all obselete code
	around SPECTRO_FOLDER.

	* Mscripts_database/q2_get_atm.m (q2_get_atm): Adopted to change
	of folders below.

	* Settings/q_fields.rst: Replaced FOLDER_ARTSXMLDATA with
	FOLDER_MSIS90. Run spell check.

	* Mscripts_arts/q2_inv.m (subfun4l2): L2 was not set for
	temperature retrievals.

2016-05-27  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Mscripts_database/l1b_filter.m: Changed defualt for lag0_max to 2.

	* Settings/q_meso.m (q_meso): Started on fmode 21.

2016-05-27  Patrick Eriksson  <patrick.eriksson@chalmers.se>
